# cmake-toys

./: CMakeLists.txt  main.c
